fix: added overflow hiddento the body

--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -11,6 +11,10 @@ main,
   height: 100%;
 }
 
+body {
+  overflow: hidden;
+}
+
 @media screen and (max-height: 800px) {
   .main-section {
     > div {
